--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Evote
+
+spring.datasource.url=jdbc:mysql://localhost:3306/e_vote_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Dialecte Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Paramètres JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
