mise à jour des fichiers properties et du script sql et ajout du script de test pour la base de données et d'un endpoint pour lister les utilisiteurs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Evote
 
-spring.datasource.url=jdbc:mysql://localhost:3306/e_vote_db
+#Parametrage de l'acces à la base de données
+spring.datasource.url=jdbc:mysql://localhost:3306/evote_db
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,6 +9,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Dialecte Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# ParamÃ¨tres JPA
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+
