--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Evote
 
-#Parametrage de l'acces à la base de données
+#Parametrage de l'acces ï¿½ la base de donnï¿½es
 spring.datasource.url=jdbc:mysql://localhost:3306/evote_db
 spring.datasource.username=root
 spring.datasource.password=
